...
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/rules_search"
            app:startIconDrawable="@android:drawable/ic_menu_search"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rulesFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/rulesFound"
...
